[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/ui/Counter.gd" type="Script" id=1]
[ext_resource path="res://art/themes/MainTheme.tres" type="Theme" id=2]

[node name="Counter" type="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -120.0
margin_bottom = 69.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -117.0
margin_bottom = 96.0
grow_horizontal = 0

[node name="TimeLabel" type="Label" parent="VBoxContainer"]
margin_right = 117.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
align = 2

[node name="FuelLabel" type="Label" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 117.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 30 )
align = 2
